6875577: CTW fails with /hotspot/src/share/vm/opto/memnode.cpp

Fix do_null_check to check for unloaded klass for all oop pointers.

Reviewed-by: never, cfang